# BuggyIpc

./: CMakeLists.txt  README.md  inproc.cpp  main.cpp  pub.cpp  sub.cpp
doc/: Readme.md
interface/: OneIpc.hpp  Publisher.hpp  Subscriber.hpp  result.hpp
src/: Publisher.cpp  Subscriber.cpp
